# home-monitor

./: Dockerfile  README.md  docker-compose.yml  randomizer.py
server/: Cargo.toml  data.db  data.db-journal
server/src/: cors.rs  database.rs  get.rs  main.rs  period.rs  post.rs
website/: Cargo.toml  Trunk.toml  styles.css
website/src/: consts.rs  humidity.rs  light.rs  main.rs  motion.rs  period.rs  plot.rs  temperature.rs
