[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["HtmlSelectElement"] }
wasm-bindgen = "0.2.93"
plotters-canvas = "0.3.0"
plotters = "0.3.6"
chrono = "0.4.38"
wasm-logger = "0.2.0"
log = "0.4.22"
gloo-net = "0.6.0"
